--- a/style.css
+++ b/style.css
@@ -19,6 +19,13 @@ body {
     border-color: white;
 }
 
+#create-btn {
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: white;
+    text-decoration: underline;
+}
 
 
 button{
